<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/landing_email"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/landing_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:enabled="false"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/genericGrayFontColor"
                android:importantForAutofill="no" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/disclaimer"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/genericGrayFontColor" />

    <Button
        android:id="@+id/landing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_account"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/copyright_text1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/genericGrayFontColor"
        android:textSize="12sp" />

</LinearLayout>