<?xml version="1.0" encoding="utf-8"?><!--
    /*
    * MIT License
    *
    * Copyright (c) 2020 Trusona Inc (www.trusona.com) All Rights Reserved
    *
    * Permission is hereby granted, free of charge, to any person obtaining a copy
    * of this software and associated documentation files (the "Software"), to deal
    * in the Software without restriction, including without limitation the rights
    * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    * copies of the Software, and to permit persons to whom the Software is
    * furnished to do so, subject to the following conditions:
    *
    * The above copyright notice and this permission notice shall be included in all
    * copies or substantial portions of the Software.
    *
    * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    * FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
    * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    * SOFTWARE.
    */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trusonafication_root_view"
    style="@style/primary_inverse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background_blue"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <Button
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:background="@android:color/white"
                android:text="@string/bill_pay"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_gray" />

            <Button
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:text="@string/transfers"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_gray" />

            <Button
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:background="@android:color/white"
                android:text="@string/deposit"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:text="@string/bank_accounts"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/default_username"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/highlight_blue"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.4"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/checking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checking_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/the_green" />

            <TextView
                android:id="@+id/checking_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checking"
                android:textColor="@color/dark_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/savings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/savings_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/the_green" />

            <TextView
                android:id="@+id/savings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savings"
                android:textColor="@color/dark_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/risk_free_title"
                android:text="@string/risk_free_amount"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/the_disable_green" />

            <TextView
                android:id="@+id/risk_free_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/risk_free"
                android:textColor="@color/light_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cash_reward_title"
                android:text="@string/cash_reward_amount"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/the_green" />

            <TextView
                android:id="@+id/cash_reward_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_reward"
                android:textColor="@color/dark_gray" />

        </RelativeLayout>

        <Button
            android:id="@+id/landing_button"
            style="@style/button"
            android:text="@string/register_with_trusona"
            android:visibility="gone" />

        <Button
            android:id="@+id/qr_login_button"
            style="@style/button"
            android:text="@string/truqr_example"
            android:visibility="gone" />

        <!-- dead for now
        <Button
            android:id="@+id/scan_dl_button"
            style="@stprimary_buttontton"
            android:text="@string/scan_dl_example"/>

        <Button
            android:id="@+id/pending_trusonafications_button"
            style="@stprimary_buttontton"
            android:text="@string/pending_trusonafications_example"/>

        <Button
            android:id="@+id/recent_trusonafications_button"
            style="@stprimary_buttontton"
            android:text="@string/recent_trusonafications_example"/>
            -->

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:background="@color/background_blue">

        <FrameLayout
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableStart="@drawable/ic_star"
                android:gravity="center|center_horizontal"
                android:text="@string/open_saving_account_button_text"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/acme_blue"
                android:textStyle="bold" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:text="@string/copyright_text2"
            android:textColor="@color/dark_gray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </RelativeLayout>

</LinearLayout>