<?xml version="1.0" encoding="utf-8"?><!--
    /*
    * MIT License
    *
    * Copyright (c) 2020 Trusona Inc (www.trusona.com) All Rights Reserved
    *
    * Permission is hereby granted, free of charge, to any person obtaining a copy
    * of this software and associated documentation files (the "Software"), to deal
    * in the Software without restriction, including without limitation the rights
    * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    * copies of the Software, and to permit persons to whom the Software is
    * furnished to do so, subject to the following conditions:
    *
    * The above copyright notice and this permission notice shall be included in all
    * copies or substantial portions of the Software.
    *
    * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    * FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
    * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    * SOFTWARE.
    */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/primary_screen"
    android:orientation="vertical"
    tools:context=".ui.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/not_registered"
            style="@style/primary_element"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_not_registered" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:visibility="gone"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/header_label"
            style="@style/header"
            android:layout_marginTop="8dp"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/device_id_label"
            style="@style/label"
            android:text="@string/device_identifier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_label"
            tools:layout_editor_absoluteY="82dp" />

        <TextView
            android:id="@+id/device_identifier"
            style="@style/primary_element"
            android:layout_marginTop="8dp"
            android:text="@string/uuid_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/device_id_label" />

        <TextView
            android:id="@+id/device_status_label"
            style="@style/label"
            android:layout_marginTop="8dp"
            android:text="@string/device_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/device_identifier" />

        <TextView
            android:id="@+id/device_status"
            style="@style/primary_element"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/device_status_label" />

        <TextView
            android:id="@+id/registration_label"
            style="@style/label"
            android:layout_marginTop="8dp"
            android:text="@string/registration_identifier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/device_status" />

        <TextView
            android:id="@+id/registration_identifier"
            style="@style/primary_element"
            android:layout_marginTop="8dp"
            android:text="@string/uuid_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_label" />

        <TextView
            android:id="@+id/email_label"
            style="@style/label"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_identifier" />

        <TextView
            android:id="@+id/email"
            style="@style/primary_element"
            android:layout_marginTop="8dp"
            android:text="@string/email_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <Button
            android:id="@+id/reset_button"
            style="@style/button_danger"
            android:padding="10dp"
            android:text="@string/reset_demo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>