<?xml version="1.0" encoding="utf-8"?><!--
    /*
    * MIT License
    *
    * Copyright (c) 2020 Trusona Inc (www.trusona.com) All Rights Reserved
    *
    * Permission is hereby granted, free of charge, to any person obtaining a copy
    * of this software and associated documentation files (the "Software"), to deal
    * in the Software without restriction, including without limitation the rights
    * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    * copies of the Software, and to permit persons to whom the Software is
    * furnished to do so, subject to the following conditions:
    *
    * The above copyright notice and this permission notice shall be included in all
    * copies or substantial portions of the Software.
    *
    * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    * FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
    * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    * SOFTWARE.
    */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/top_third"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            style="@style/trubank_logo"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/middle_third"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <TextView
            style="@style/label"
            android:background="@color/background_blue"
            android:labelFor="@id/landing_email"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/landing_email"
            style="@style/text_field"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/disclaimer"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/landing_button"
            style="@style/primary_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/create_account"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <TextViewp
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/copyright_text1"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</LinearLayout>