<?xml version="1.0" encoding="utf-8"?><!--
    /*
    * MIT License
    *
    * Copyright (c) 2020 Trusona Inc (www.trusona.com) All Rights Reserved
    *
    * Permission is hereby granted, free of charge, to any person obtaining a copy
    * of this software and associated documentation files (the "Software"), to deal
    * in the Software without restriction, including without limitation the rights
    * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    * copies of the Software, and to permit persons to whom the Software is
    * furnished to do so, subject to the following conditions:
    *
    * The above copyright notice and this permission notice shall be included in all
    * copies or substantial portions of the Software.
    *
    * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    * FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
    * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    * SOFTWARE.
    */
-->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/verification_prompt"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  android:visibility="gone">

  <RelativeLayout
    android:id="@+id/top_third"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <ImageView
      style="@style/trubank_logo"
      android:contentDescription="@string/app_name" />

  </RelativeLayout>

  <LinearLayout
    android:id="@+id/middle_third"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2.5"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/email_verification_prompt_title"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
      android:textColor="@color/acme_blue"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/email_verification_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:text="@string/email_verification_prompt_message"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
      android:textColor="@color/acme_blue" />

  </LinearLayout>

</LinearLayout>